# GamesInOne

./: .gitignore  ORG.md  README.md  q
.github/workflows/: backend-test.yml  front-end-test.yml  main.yml  release.yml
reports/: README.md  Week10Report.md  Week3Report.md  Week4Report.md  Week5Report.md  Week6Report.md  Week7Report.md  Week8Report.md  Week9Report.md
src/: Makefile  gamelauncher.cpp  gamelauncher.h
src/LinkFrontAndBack/: LinkFrontAndBack.cpp  LinkFrontAndBack.vcxproj  LinkFrontAndBack.vcxproj.filters
src/backend/: CMakeLists.txt  Makefile  README.md  backend_testing.cc  cMakeLists.txt  dbObjects.h  demo.cpp  example.cpp  example.hpp  gamelauncher.cpp  gamelauncher.h  gamesDB.cpp  hello_test.cc
src/backend/test/: CMakeLists.txt  ExampleTests.cpp
src/database/: Makefile  README.md  dbObjects.h  example  example.cpp  example.h  gamesDB.cpp  gamesDB.h
src/front-end/: AddGameScreen.Designer.cs  AddGameScreen.cs  AddGameScreen.resx  GameRow.Designer.cs  GameRow.cs  Games In One App.csproj  Games In One App.sln  GamesInOne.Designer.cs  GamesInOne.cs  Program.cs  README.md
src/front-end/Properties/: Resources.Designer.cs  Resources.resx
src/front-end/front-end-interface/: AddGameScreen.Designer.cs  AddGameScreen.cs  AddGameScreen.resx  GameInfoList.cs  GameRow.Designer.cs  GameRow.cs  GamesEditList.cs  GamesInOne.csproj  GamesInOne.sln  MainScreen.Designer.cs  MainScreen.cs  Program.cs
src/front-end/front-end-test/: Class1.cs  FrontEndTest.csproj  FrontEndUnitTest.cs  UnitTest1.cs
src/frontend-test/: MainScreenTest.cs  frontend-test.csproj
(+8 files in other folders)
